# DSP-lib

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  run_test.sh
Core/: CMakeLists.txt
Core/Inc/: DSP_Assert.h  DSP_Benchmark.h  DSP_Constants.h  DSP_Matrix.h  DSP_PID.h  DSP_ProcessControl.h  DSP_Quaternion.h  DSP_SignalFiltering.h  DSP_Types.h  DSP_Utils.h  DSP_Vector.h  ProcessControl.h  Quaternion.h  SignalFiltering.h
Core/Inc/AHRS/: DSP_AHRS_AQUA.h  DSP_AHRS_Data.h  DSP_AHRS_EKF.h  DSP_AHRS_Madgwick.h  DSP_AHRS_Mahony.h  DSP_AHRS_NC.h
Core/Inc/SignalFiltering/: DSP_FIR.h  DSP_IIR.h
Core/Src/AHRS/: Config.cmake  DSP_AHRS_AQUA_f32.c  DSP_AHRS_Common.h  DSP_AHRS_Data.c  DSP_AHRS_EKF.c  DSP_AHRS_EKF_f32.c  DSP_AHRS_Madgwick_f32.c  DSP_AHRS_Mahony_f32.c  DSP_AHRS_NC_f32.c
Core/Src/Math/: Config.cmake  DSP_Matrix_f32.c  DSP_Matrix_f64.c  DSP_Quaternion_f32.c  DSP_Quaternion_f64.c  DSP_Vector_f64.c
Core/Src/MathematicalStructures/: Config.cmake  DSP_Matrix_f32.c  DSP_Quaternion_f32.c  DSP_Quaternion_f64.c  Quaternion_f32.c
Core/Src/ProcessControl/: Config.cmake  DSP_PID_f32.c  DSP_PID_f64.c  DSP_SimplePID_f32.c  PID.c
Core/Src/SignalFiltering/: Config.cmake  DSP_FIR_RT.c  DSP_FIR_RT_f32.c  DSP_FIR_RT_f64.c  DSP_IIR_RT_f32.c  DSP_IIR_RT_f64.c
Include/: SignalFiltering.h
Src/: DSP_FIR_RT.c  DSP_IIR_RT.c
Test/: Config.cmake  bench_main.c  test_main.c  test_matrix.c  test_registry.cpp  test_registry.h
matlab/: AHRS_test.m  control_test.m  lup_test.m
python/: AHRS_DataCompare.py  AHRS_SynthData.py  AHRS_TestData.py  (+3 more)
(+25 files in other folders)
